--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 dependencies = [
     "fastapi>=0.103.2",
     "uvicorn[standard]>=0.23.2",
+    "black>=23.9.1",
+    "ruff>=0.0.292",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
