--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ license = {text = "MIT"}
 [tool.poetry]
 name = "hackthon-api"
 version = "1.0.0"
+description = ""
+authors = []
 
 [tool.poetry.dependencies]
 python = "^3.11"
